ecmascript/parser/tests/jsx/errors/attribute-empty-expression/input.js.stderr
error: Unexpected token Some(JSXTagEnd). Expected one of this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, ( or an identifier
 --> $DIR/tests/jsx/errors/attribute-empty-expression/input.js:1:14
  |
1 | <foo bar={} />
  |              ^

error: TS1109
 --> $DIR/tests/jsx/errors/attribute-empty-expression/input.js:1:13
  |
1 | <foo bar={} />
  |             ^

